Added Latte publish process that uses the tokens from a successful login to contact the Latte repository app for a presigned S3 URL. This is then used to upload the artifacts to an S3 bucket.